[package]
name = "bls-blueprint"
version = "0.1.1"
description = "A BLS Blueprint that can run keygen and signing jobs on demand from the Tangle network"
edition = "2021"

[package.metadata.blueprint]
manager = { Evm = "BlsBlueprint" }

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", features = ["std", "macros", "tangle", "networking", "local-store", "round-based-compat", "networking-sp-core-ecdsa"] }
color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace"] }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
round-based = { version = "0.3.2", features = ["runtime-tokio", "derive"] }
thiserror = "2.0.3"
itertools = "0.13.0"

# MPC specific deps
bls12_381_plus = "0.8.18"
snowbridge-milagro-bls = "1.5.4"
gennaro-dkg = { version = "0.8.0", features = ["curve25519"]}

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", features = ["build"] }

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", features = ["std", "tangle", "testing"] }
color-eyre = { version = "0.6", features = ["capture-spantrace", "track-caller"] }
tokio = { version = "1.43.0", features = ["test-util"] }

[features]
default = ["std"]
std = []
